upd: default duration
